Alteração no banner e estilização e interação da home page - Apple

--- a/HomePage - Apple/projeto.html
+++ b/HomePage - Apple/projeto.html
@@ -7,7 +7,7 @@
             <link rel="stylesheet" href="assets/css/style.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
         </head>
         <body>
             <!--Menu-->
@@ -36,7 +36,7 @@
                 <div class="banner_img">
                     <div class="banner_title">
                         <h1><a href="cadastro/cadastro.html" target="_blank">Cadastre-se</a></h1>
-                        <h3>para receber as novas promoções!!</h3>
+                        <h3>Receba as novas promoções!</h3>
                     </div>
                 </div>               
             </section>
